# hibob-updates-monitor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/chglog/: config.yml
.github/workflows/: ci-checks.yml  pr-labeler.yml
hibob_monitor/: __init__.py  __main__.py  auth.py  cache.py  change_detection.py  cli.py  config.py  cookies.py  domain_utils.py  employees.py  http_utils.py  models.py  output.py
tests/integration/: test_placeholder.py
tests/unit/: test_change_detection.py  test_cli.py  test_models.py
