[project]
name = "hibob-monitor"
version = "1.0.0"
description = "HiBob Employee Monitor - Download active employees using browser cookie extraction"
requires-python = ">=3.13"
dependencies = [
    "browser_cookie3>=0.19.1",
]

[project.scripts]
hibob-monitor = "hibob_monitor.__main__:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hibob_monitor"
module-root = ""

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    # Modules
    "D",   # pydocstyle


    # Specific rules
    "TRY400",  # logging.exception instead of logging.error
    ## Conflicting rules
    "COM812",
    "PLC0414",
]

[tool.ruff.lint.per-file-ignores]
"!tests/" = [
    "S101",  # assert
    "T201",  # print
]

[[tool.mypy.overrides]]
module = [
    'browser_cookie3',
]
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
ignore_missing_imports = true
